fix mobile banner dots size and footer divs wrap

--- a/src/app/homepage/components/banner/banner.component.scss
+++ b/src/app/homepage/components/banner/banner.component.scss
@@ -16,7 +16,7 @@
     }
 
     img {
-      @apply w-40 opacity-70;
+      @apply w-28 lg:w-40 opacity-70;
     }
   }
 }
